# sanity-backup-to-s3

./: .env.example  .gitignore  README.md  __init__.py  main.py  pyproject.toml
sanity_backup_to_s3/: export_data.py  main.py  upload_to_s3.py
src/: __init__.py  config.py  export_data.py  main.py  upload_to_s3.py
